--- a/.github/workflows/macos_builds.yml
+++ b/.github/workflows/macos_builds.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 env:
   # Only used for the cache key. Increment version to force clean build.
   GODOT_BASE_BRANCH: 3.5
-  SCONSFLAGS: verbose=yes warnings=all debug_symbols=no custom_modules="./custom_modules"
+  SCONSFLAGS: verbose=yes warnings=all debug_symbols=yes custom_modules="./custom_modules"
 
 concurrency:
   group: ci-${{github.actor}}-${{github.head_ref || github.run_number}}-${{github.ref}}-macos
@@ -31,7 +31,7 @@ jobs:
             tools: false
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: 'true'
           token: ${{ secrets.PIXELOVER_MODULE }}
