--- a/.github/workflows/windows_builds.yml
+++ b/.github/workflows/windows_builds.yml
@@ -6,7 +6,7 @@ on: [push, pull_request]
 env:
   # Only used for the cache key. Increment version to force clean build.
   GODOT_BASE_BRANCH: 3.5
-  SCONSFLAGS: verbose=yes warnings=all debug_symbols=no custom_modules="./custom_modules"
+  SCONSFLAGS: verbose=yes warnings=all debug_symbols=yes custom_modules="./custom_modules"
   SCONS_CACHE_MSVC_CONFIG: true
 
 concurrency:
@@ -34,7 +34,7 @@ jobs:
             tools: false
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: 'true'
           token: ${{ secrets.PIXELOVER_MODULE }}
